objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually entered. It is used to lookup the financial institution&apos;s branch location that the opportunity is associated to.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Lost_Reason_Notes__c</fullName>
        <description>This long text area is optional and manually entered. This field provides an area where a user can include additional information as to why an Opportunity was Closed Lost.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Lost Reason Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Lost_Reason__c</fullName>
        <description>This picklist field is manually selected and optional. The picklist allows a user to select preset reasons for why the Opportunity was Closed Lost.</description>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor- Price</fullName>
                </value>
                <value>
                    <fullName>Competitor-Product/Service Functionality Gap</fullName>
                </value>
                <value>
                    <fullName>Competitor – Product/Service Gap</fullName>
                </value>
                <value>
                    <fullName>Competitor- Product/Service Set Gap,</fullName>
                </value>
                <value>
                    <fullName>Competitor- Other</fullName>
                </value>
                <value>
                    <fullName>Does not need services</fullName>
                </value>
                <value>
                    <fullName>Lost Loan Relationship.</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product/Service Functionality Gap</fullName>
                </value>
                <value>
                    <fullName>Product/Service Gap</fullName>
                </value>
                <value>
                    <fullName>Loan Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Loan Declined</fullName>
                </value>
                <value>
                    <fullName>Lost Deposit Relationship</fullName>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                </value>
                <value>
                    <fullName>LTV</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor__c</fullName>
        <description>This picklist field is manually selected and optional. It is used to specify the competitor of the financial institution that the opportunity was lost or could be lost to.</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor Bank</fullName>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BMO Harris</fullName>
                </value>
                <value>
                    <fullName>BOA</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>First Midwest</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>The Private Bank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Wintrust</fullName>
                </value>
                <value>
                    <fullName>Smaller Community Bank</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Converted_Date__c</fullName>
        <description>This field is automatically populated when an opportunity is converted to nCino. This field will specify the date in which the opportunity was converted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Converted_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when an opportunity is converted to a deposit. It is a lookup field to the deposit record that was converted from the opportunity. It links the opportunity to the product that was converted.</description>
        <label>Converted Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CurrentGenerators__c</fullName>
        <description>--DEPRECATED--</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Bank__c</fullName>
        <description>This field is optional and manually entered. This picklist field is used to specify the current bank at which this opportunity for the account/ relationship may be held.</description>
        <label>Current Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor Bank</fullName>
                </value>
                <value>
                    <fullName>Associated</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>BMO Harris</fullName>
                </value>
                <value>
                    <fullName>BOA</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Fifth Third</fullName>
                </value>
                <value>
                    <fullName>First Midwest</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>PNC</fullName>
                </value>
                <value>
                    <fullName>The Private Bank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Wintrust</fullName>
                </value>
                <value>
                    <fullName>Smaller Community Bank</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Loan_Closed__c</fullName>
        <description>This field is automatically populated. This date field is set to the date at which the loan associated to this opportunity closed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Loan Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Days_at_Current_Stage__c</fullName>
        <description>This field is automatically populated via formula and is used to specify the number of days the loan associated to the opportunity has been in its current stage.</description>
        <formula>TODAY() - LLC_BI__Start_Date_at_Current_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DeliveryInstallationStatus__c</fullName>
        <description>This is a manually entered and optional field. This picklist field is used to specify the status of the product the opportunity is related to (eg. in progress, not yet started, completed). Workflow can be configured to automatically change the statuses when certain actions are completed by the user.  Generally this field would be used for Treasury Services products.</description>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Gross_Fee_Discount__c</fullName>
        <description>This field is manually entered and optional. This field allows users to specify a percent discount the opportunity qualifies for on the gross fee amount.</description>
        <label>Estimated Gross Fee Discount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually entered and optional. When the field it checked, it indicates the record belongs to an existing customer. Unchecked indicates this record is for a new customer.</description>
        <label>Existing Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when the opportunity is converted to a loan. This field captures the loan record that the opportunity was converted to. Linking the opportunity to the product that was converted.</description>
        <label>Converted Opportunity</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Converted Opportunity</relationshipLabel>
        <relationshipName>ConvertedOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MainCompetitors__c</fullName>
        <description>This text field is manually entered and optional. It is generally used to specify the main competitors for the financial institution closing this opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OrderNumber__c</fullName>
        <description>This text field is manually entered and optional. It is used to specify the financial institution&apos;s unique number ( order number) for this opportunity if it differs from the Salesforce record number automatically assigned to it upon creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field manually selected and will drive the available product type and product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Line</label>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This picklist field is manually selected and drives the available product type and product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is a system generated field and specifies the Product Package the lead was converted to. The field is populated after the Convert to Product Package process is executed. The product package field is a lookup to the product package record that the loan associated to this opportunity is a part of.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for.  Use either the reference or the picklist field..</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is manually selected and will filter based on product line selection and will drive the available product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This picklist field is manually selected and will filter based on product line selection and will drive the available product selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for. Use either the reference or the picklist field.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Special Revolving Line of Credit</fullName>
                </value>
                <value>
                    <fullName>AG Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>CML Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>AG Leases</fullName>
                </value>
                <value>
                    <fullName>CML Leases</fullName>
                </value>
                <value>
                    <fullName>Guidance Line</fullName>
                </value>
                <value>
                    <fullName>Bridge Loans</fullName>
                </value>
                <value>
                    <fullName>7(a)</fullName>
                </value>
                <value>
                    <fullName>7(a) Capline</fullName>
                </value>
                <value>
                    <fullName>SBA Express</fullName>
                </value>
                <value>
                    <fullName>Export Express</fullName>
                </value>
                <value>
                    <fullName>Export Working Capital</fullName>
                </value>
                <value>
                    <fullName>International Trade</fullName>
                </value>
                <value>
                    <fullName>504 Program</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Management Solutions</fullName>
                </value>
                <value>
                    <fullName>Payable Solutions</fullName>
                </value>
                <value>
                    <fullName>Receivable Solutions</fullName>
                </value>
                <value>
                    <fullName>Liquidity Solutions</fullName>
                </value>
                <value>
                    <fullName>Fraud Solutions</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Public Funds</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
                <value>
                    <fullName>IRAs</fullName>
                </value>
                <value>
                    <fullName>HSAs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This picklist field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the opportunity&apos;s particular product  Use either the reference or the picklist field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Non Revolving Line of Credit (Draw)</fullName>
                </value>
                <value>
                    <fullName>Revolving Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Mortgage Warehousing Line</fullName>
                </value>
                <value>
                    <fullName>Dealer Floor Plan</fullName>
                </value>
                <value>
                    <fullName>Stand by</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Municipal Lease</fullName>
                </value>
                <value>
                    <fullName>Single Disbursement</fullName>
                </value>
                <value>
                    <fullName>Term Loan</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>General Use</fullName>
                </value>
                <value>
                    <fullName>Multi User</fullName>
                </value>
                <value>
                    <fullName>EDI Addenda Translation</fullName>
                </value>
                <value>
                    <fullName>BAI File Download</fullName>
                </value>
                <value>
                    <fullName>SFTP File Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH Credit Origination</fullName>
                </value>
                <value>
                    <fullName>ACH Debit Origination</fullName>
                </value>
                <value>
                    <fullName>Third Party Sender</fullName>
                </value>
                <value>
                    <fullName>Wire Transmission</fullName>
                </value>
                <value>
                    <fullName>Business BillPay</fullName>
                </value>
                <value>
                    <fullName>Credit Card Small Business</fullName>
                </value>
                <value>
                    <fullName>Credit Card Corporate</fullName>
                </value>
                <value>
                    <fullName>Credit Card Purchasing</fullName>
                </value>
                <value>
                    <fullName>Low Speed RDC</fullName>
                </value>
                <value>
                    <fullName>High Speed RDC</fullName>
                </value>
                <value>
                    <fullName>Mobile RDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Products_Interested_In__c</fullName>
        <description>This field is manually entered and optional. It is a free form text area that allows the user to detail any additional products the relationship/account associated to the existing opportunity may be interested in.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Interested In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prospect_Annual_Revenue__c</fullName>
        <description>This currency field is manually entered and optional, it can be used to specify the relationship&apos;s annual revenue. This relationship would be the one that is directly associated to the opportunity.</description>
        <label>Prospect Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prospect_Location_Scope__c</fullName>
        <description>This picklist field is manually selected and optional. The field allows the user to specify the scope at which the location of the prospect (relationship) is marketed( eg. local, regional, national, etc.). The relationship would be the one that is directly associated to the opportunity.</description>
        <label>Prospect Location Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a manually selected and optional. This checkbox (if checked) is used to specify that the opportunity has had an RFP (request for proposal) associated to it.</description>
        <label>RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date_at_Current_Stage__c</fullName>
        <description>This date field is automatically populated based on the date that the current stage was entered into. The field helps drive the actual days at current stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date at Current Stage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Deposits__c</fullName>
        <description>This field is automatically populated based on the total amount (currency) of the deposits of the account/ relationship associated to the opportunity. This information is mapped from the relationship if deposit level detail is available.</description>
        <label>Total Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TrackingNumber__c</fullName>
        <description>This text field is optional and manually entered. It is used to specify a unique tracking number for the opportunity--if the financial institution employs unique tracking numbers.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <inlineHelpText>Expected Loan Amount</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TM_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Anticipated_Deposit_Amount__c</fullName>
        <label>Anticipated Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TM_Deposit_External_Referrer__c</fullName>
        <description>This field is used on TM and Deposit type record page</description>
        <label>External Referrer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Realtor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Expected_Install_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Install / Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TM_Expected_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TM_IsSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TM_New_Money__c</fullName>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TM_OwnedByLoginUser__c</fullName>
        <formula>IF(OwnerId = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By LoginUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_Prediction_Score__c</fullName>
        <label>Prediction Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_Projected_Annual_Treasury_Fee_Income__c</fullName>
        <label>Projected First Year Treasury Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TM_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_ReferralIsLoginUser__c</fullName>
        <formula>IF( FinServ__ReferredByUser__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral is LoginUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_SendEmail_For_30Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email For 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TM_Send_Email_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TM_Stage_Changed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Conversion_Complete__c</fullName>
        <description>Used to indicate when an Opportunity has been successfully converted. Added for the Commercial Accelerate project.</description>
        <formula>IF(NOT(ISBLANK(LLC_BI__Converted_Date__c)),
True,
False)</formula>
        <label>Conversion Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORMS__TrackingNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>